tests/NormalTests/paczka2/big_fuzzy/45023946.err
Error in line 4: DLp A909 1,5
Error in line 5: 3tL4 A909 8,1
Error in line 10: iABt A909 50,9
Error in line 19: DLp A909 76,5
Error in line 29: A775 S864 85,9
Error in line 31: 3tL4 A775 6,5
Error in line 30: A775 A775 67,8
Error in line 54: qfYOIon A909 0,00
Error in line 41: qfYOIon A909 94,7
Error in line 58: DLp A583 27,4
Error in line 65: qfYOIon A583 48,38
Error in line 62: qfYOIon S864 28,1
Error in line 78: DLp A775 11,8
Error in line 80: DLp A583 27,7
Error in line 83: sPHKE A909 55,4
Error in line 81: DLp A775 63,9
Error in line 66: qfYOIon A775 63,0
Error in line 86: n5mhJ A909 96,7
Error in line 61: iABt A775 99,0
Error in line 99: DLp S864 86,7
Error in line 107: qfYOIon A583 60,8
Error in line 94: iABt A909 67,4
Error in line 114: 3tL4 A583 -4,9
Error in line 127: iABt A909 61,8
Error in line 132: sPHKE A583 13,5
Error in line 141: sPHKE A909 21,4
Error in line 144: sPHKE A775 15,2
Error in line 142: 3tL4 S864 41,5
Error in line 131: n5mhJ A583 89,8
Error in line 146: sPHKE S864 70,5
Error in line 155: qfYOIon S864 57,8
Error in line 160: iABt A909 63,0
Error in line 182: qfYOIon A775 17,0
Error in line 187: qfYOIon A583 31,4
Error in line 194: n5mhJ S864 39,3
Error in line 199: qfYOIon S864 154,32
Error in line 201: A775 A775 137,3
Error in line 206: A775 A909 52,5
Error in line 207: A775 S864 28,2
Error in line 195: n5mhJ A775 48,0
Error in line 220: DLp A583 96,8
Error in line 228: A775 A909 34,1
